--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ img {
 }
 
 ::placeholder {
-    color:rgb(125, 123, 244);
+    color:rgb(240, 33, 195);
     font-family: 'Luckiest Guy', cursive;
 }
 
@@ -53,8 +53,9 @@ button {
     padding: 0;
     border: 2px solid transparent;
     border-radius: 8px;
-    
+    font-family: 'Luckiest Guy', cursive;
     font-size: 12px;
+    color: white;
     background-color: transparent;
     text-align: center;
     cursor: pointer;
