--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ li {
 img {
     position:absolute;
     width:100%;
-    
+    background-repeat: repeat;
     left: 0px;
     top: 0px;
     right:0px;
