--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Luckiest Guy', cursive;
     text-align: center;
-    background-repeat: repeat;
+    
 }
 ul { padding-left:15px; list-style-position:outside; }
 li {
@@ -20,15 +20,20 @@ li {
 
 img {
     position:absolute;
-    width:100%;
+    width: 100vw;
+    height: 100%;
     
+    background-position: center center;
+    background-size: cover;
+     
     left: 0px;
     top: 0px;
     right:0px;
     bottom:0px;
+    margin: auto;
     z-index: -1;
     opacity:80%;
-    overflow: hidden;
+    
 }
 
 #greeting {
